// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enrich pending applications 1`] = `
Object {
  "amountRequested": "£250000",
  "createdAt": "2020-03-04T23:00:00.000Z",
  "deleteUrl": "/apply/your-funding-proposal-v2/delete/some-uuid",
  "editUrl": "/apply/your-funding-proposal-v2/edit/some-uuid",
  "expiresAt": "2020-03-04T23:00:00.000Z",
  "formId": "standard-enquiry",
  "id": "some-uuid",
  "isExpired": false,
  "overview": Array [
    Object {
      "label": "Project length",
      "value": "1 years",
    },
    Object {
      "label": "Location",
      "value": "Lancashire",
    },
    Object {
      "label": "Organisation",
      "value": "Example trading name",
    },
  ],
  "progress": Any<Object>,
  "projectCountry": "england",
  "projectName": "My project",
  "type": "pending",
  "untitledName": "Untitled proposal",
  "updatedAt": "2020-03-04T23:00:00.000Z",
}
`;

exports[`enrich submitted applications 1`] = `
Object {
  "amountRequested": "£250000",
  "formId": "awards-for-all",
  "id": "some-uuid",
  "overview": Array [
    Object {
      "label": "Project length",
      "value": "1 years",
    },
    Object {
      "label": "Location",
      "value": "Lancashire",
    },
    Object {
      "label": "Organisation",
      "value": "Example trading name",
    },
  ],
  "projectCountry": "england",
  "projectName": "My project",
  "submittedAt": "2020-03-04T23:00:00.000Z",
  "type": "submitted",
  "untitledName": "Untitled proposal",
}
`;
